--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     "source": "https://github.com/notamedia/console-jedi/"
   },
   "require": {
-    "php": ">=5.4",
-    "symfony/console": "~2.8|~3",
-    "symfony/filesystem": "~2.8|~3"
+    "php": ">=7.4",
+    "symfony/console": "~2.8|~3|~4|~5|~6",
+    "symfony/filesystem": "~2.8|~3|~4|~5|~6"
   },
   "autoload": {
     "psr-4": {
